@@ -245,11 +245,13 @@ class KML extends Vector {
    *
    * @public
    * @function
+   * @param {boolean} force Indica si se debe forzar la solicitud
+   * de objetos geográficos.
    * @api stable
    */
-  updateSource_() {
+  updateSource_(force) {
     if (isNullOrEmpty(this.vendorOptions_.source)) {
-      this.requestFeatures_().then((response) => {
+      this.requestFeatures_(force).then((response) => {
         this.olLayer.setSource(new OLSourceVector({
           loader: () => {
             const screenOverlay = response.screenOverlay;
@@ -267,6 +269,52 @@ class KML extends Vector {
         this.facadeVector_.addFeatures(response.features);
       });
     }
+  }
+
+  /**
+   * Este método elimina y crea la capa de OpenLayers.
+   *
+   * @function
+   * @public
+   * @api
+   */
+  recreateLayer() {
+    const olMap = this.map.getMapImpl();
+    if (!isNullOrEmpty(this.olLayer)) {
+      olMap.removeLayer(this.olLayer);
+      this.olLayer = null;
+    }
+
+    this.formater_ = new FormatKML({
+      label: this.label_,
+      extractStyles: this.extractStyles_,
+    });
+    this.loader_ = new LoaderKML(this.map, this.url, this.formater_);
+    this.olLayer = new OLLayerVector(extend({
+      extent: this.maxExtent_,
+      opacity: this.opacity_,
+    }, this.vendorOptions_, true));
+    this.updateSource_(true);
+    this.setVisible(this.visibility);
+    // sets its z-index
+    if (this.zIndex_ !== null) {
+      this.setZIndex(this.zIndex_);
+    }
+
+    olMap.addLayer(this.olLayer);
+  }
+
+  /**
+   * Sobreescribe la URL de la capa.
+   *
+   * @function
+   * @param {String} newURL Nueva URL de la capa.
+   * @public
+   * @api
+   */
+  setURL(newURL) {
+    this.url = newURL;
+    this.recreateLayer();
   }
 
   /**
@@ -351,12 +399,14 @@ class KML extends Vector {
    *
    * @public
    * @function
+   * @param {boolean} force Indica si se debe forzar la solicitud
+   * de objetos geográficos.
    * @returns {IDEE.layer.GeoJSON.impl.loadFeaturesPromise_} Devuelve los objetos geográficos
    * tras realizar la petición, asincrono.
    * @api stable
    */
-  requestFeatures_() {
-    if (isNullOrEmpty(this.loadFeaturesPromise_)) {
+  requestFeatures_(force) {
+    if (force || isNullOrEmpty(this.loadFeaturesPromise_)) {
       this.loadFeaturesPromise_ = new Promise((resolve) => {
         this.loader_.getLoaderFn((features) => {
           resolve(features);
